# py-anes-mf

./: .gitignore  CLAUDE.md  README.md  REFERENCIA_RAPIDA_ANGULOS.txt  main.py  portico_ejemplo.json  pyproject.toml  requirements.txt
docs/: ARQUITECTURA_PROYECTO.md  PLANIFICACION_DESARROLLO.md
docs/teoria/: NOTAS_CARGAS_TERMICAS.md  NOTAS_MOVIMIENTOS_IMPUESTOS.md  NOTAS_RESORTES_ELASTICOS.md  SELECCION_REDUNDANTES.md  SISTEMA_COORDENADAS_LOCALES.md  VISUALIZACION.md
examples/: ejemplo_carga_termica.py  ejemplo_deformada.py  ejemplo_movimientos_impuestos.py  ejemplo_resortes_elasticos.py  ejemplo_viga_biempotrada_gh1.py  ejemplo_visualizacion.py
src/: __init__.py  main.py
src/data/: __init__.py  materials_db.py  proyecto_serializer.py  sections_db.py
src/domain/: __init__.py
src/domain/analysis/: __init__.py  fuerzas_empotramiento.py  motor_deformaciones.py  motor_fuerzas.py  numerador_gdl.py  redundantes.py  sece_solver.py  solver_adaptativo.py  subestructuras.py  trabajos_virtuales.py
src/domain/entities/: __init__.py  barra.py  carga.py  material.py  nudo.py  seccion.py  vinculo.py
src/domain/mechanics/: __init__.py  equilibrio.py  esfuerzos.py
src/domain/model/: __init__.py  modelo_estructural.py
src/gui/: __init__.py  main_window.py
src/gui/canvas/: __init__.py  structure_canvas.py
src/gui/dialogs/: __init__.py  carga_dialog.py  redundantes_dialog.py
src/gui/history/: __init__.py  undo_redo_manager.py
src/gui/widgets/: __init__.py  properties_panel.py  results_panel.py
src/ui/export/: __init__.py  reporte_pdf.py
src/ui/visualization/: __init__.py  deformada.py  diagramas.py  geometria.py
src/utils/: __init__.py  constants.py  geometry.py  integration.py
tests/: __init__.py  conftest.py
tests/domain/: __init__.py  test_entities.py  test_modelo.py
tests/integration/: __init__.py  test_casos_clasicos.py  test_esfuerzos_viga_simple.py
tests/unit/: test_carga_termica.py  test_motor_deformaciones.py  test_movimiento_impuesto.py  test_resorte_elastico.py  test_solver_adaptativo.py
